# cockroach-operator

./: BUILD.bazel  Makefile  WORKSPACE  failed-restore.yaml  sub.yaml
apis/v1alpha1/: cluster_types.go  webhook.go  webhook_test.go  zz_generated.deepcopy.go
cmd/cockroach-operator/: BUILD.bazel
config/crd/bases/: crdb.cockroachlabs.com_crdbclusters.yaml
config/manager/patches/: image.yaml
config/manifests/bases/: cockroach-operator.clusterserviceversion.yaml
pkg/actor/: validate_version.go
pkg/kube/: helpers.go
pkg/testutil/: builder.go
