load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//hack/bin:deps.bzl", "fetch_cockroach_binary")

cockroach_labels = {
    "name": "CockroachDB Operator",
    "vendor": "Cockroach Labs",
    "release": "{NUMBER_COMMITS_ON_BRANCH}",
    "version": "{STABLE_DOCKER_TAG}",
    "summary": "CockroachDB is a distributed SQL database",
    "description": "CockroachDB is a PostgreSQL wire-compatible distributed SQL database",
}

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "prep_webhooks.go",
    ],
    importpath = "github.com/cockroachdb/cockroach-operator/cmd/cockroach-operator",
    visibility = ["//visibility:private"],
    deps = [
        "//apis/v1alpha1:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/resource:go_default_library",
        "//pkg/security:go_default_library",
        "//pkg/utilfeature:go_default_library",
        "@com_github_cockroachdb_errors//:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth/gcp:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/cache:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap:go_default_library",
    ],
)

go_binary(
    name = "cockroach-operator-linux-amd64",
    embed = [":go_default_library"],
    goos = "linux",
    goarch = "amd64",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "cockroach-operator-linux-arm64",
    embed = [":go_default_library"],
    goos = "linux",
    goarch = "arm64",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "licenses",
    srcs = ["//:license"],
    mode = "0755",
    package_dir = "/licenses",
)

oci_image_index(
    name = "index",
    images = [
        ":cockroach_image_linux_amd64",
        ":cockroach_image_linux_arm64",
    ],
    visibility = ["//visibility:public"],
)

oci_image(
    name = "cockroach_image_linux_amd64",
    # References container_pull from WORKSPACE
    base = "@redhat_ubi_minimal",
    labels = cockroach_labels,
    tars = [
        ":licenses",
        ":cockroach-linux-amd64-tar",
        ":operator_image_linux_amd64",
    ],
)

oci_image(
    name = "cockroach_image_linux_arm64",
    # References container_pull from WORKSPACE
    base = "@redhat_ubi_minimal",
    labels = cockroach_labels,
    tars = [
        ":licenses",
        ":cockroach-linux-arm64-tar",
        ":operator_image_linux_arm64",
    ],
)

fetch_cockroach_binary(
    name = "cockroach-linux-amd64-tar",
    arch = "amd64",
    os = "linux",
)

fetch_cockroach_binary(
    name = "cockroach-linux-arm64-tar",
    arch = "arm64",
    os = "linux",
)

pkg_tar(
    name = "operator_image_linux_amd64",
    srcs = [":cockroach-operator-linux-amd64"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "operator_image_linux_arm64",
    srcs = [":cockroach-operator-linux-arm64"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
